EN/modules/ROOT/pages/v1.1/2.adoc

:sectnums:
:sectnumlevels: 5


== Introduction to IvorySQL

=== Overview

IvorySQL is an advanced, full-featured, Oracle open source compatible PostgreSQL with a firm commitment to always remain 100% compatible and a direct replacement for the latest PostgreSQL. "switch for switching between Oracle and PostgreSQL compatibility modes. One of the highlights of IvorySQL is the PL/iSQL procedural language, which supports oracle's PL/SQL syntax and Oracle-style packages.

IvorySQL imports and enhances the https://github.com/orafce/orafce[Orafce] extension to add support for a variety of Oracle-compatible features, including built-in packages, datatypes, and conversion functions. It is released under the Apache 2 license and all types of contributions are encouraged.

=== Product Goals and Scope

We are committed to the principles of the https://opensource.com/open-source-way[open source approach] and we strongly believe in building a healthy and inclusive community. We insist that good ideas can come from anywhere. Only by including different perspectives can we make the best decisions. While the first release of IvorySQL focuses on Oracle-compatible features, the future roadmap and feature set will be defined by the community in an open source manner.

=== Core Features

IvorySQL is developed based on PostgreSQL database and is compatible with Oracle database for strong compatibility. Suitable for PostgreSQL database and Oracle database scenarios.

=== Competitive Advantages

* **Core Open Source**: IvorySQL's core code including compatible features are all open under the open source protocol, with no vendor restrictions. It is also used in Hankook database company instances and has an active developer community.
* **Oracle compatible**: Oracle databases can be migrated to IvorySQL.
* **Customizable**: Simply download the code and customize it the way you want.

* **Easy to use**: For system administrators, IvorySQL dramatically reduces the cost of administration and maintenance. For developers, IvorySQL provides a simple interface, a minimalist solution, and seamless integration with third-party tools. For data analysis professionals, IvorySQL provides easy access to data.

* **Hemco Support**: Powered by the leading PostgreSQL database provider, Hemco.

=== Technical Ecology

IvorySQL is based on PostgreSQL, with complete SQL, rock-solid reliability and a huge ecosystem.

=== Core Application Scenarios

Ivory database's main application scenarios.

* Enterprise database

  For example, ERP, transaction system, financial system involves funds, customers and other information, data cannot be lost and business logic is complex. Choosing IvorySQL as the underlying data storage can help you provide high availability under the premise of data consistency, and you can implement complex business logic with simple programming.

* Applications with LBS

  Large-scale games, O2O and other applications need to support world map, nearby businesses, distance between two points and other capabilities. PostGIS adds support for geographic objects, allowing you to run location queries in SQL without complex coding, helping you to rationalize your logic more easily, implement LBS more conveniently, and improve user stickiness.

* Data Warehousing and Big Data

  With more data types and powerful computing power, IvorySQL makes it easier for you to build a database warehouse or big data analytics platform to enhance your business operations.

* Website or App Building

  IvorySQL's good performance and powerful features can effectively improve website performance and reduce development difficulty.

* Database Migration

  If you need to migrate Oracle database to PostgreSQL database, you can directly use IvorySQL database for migration.

== Main, Basic Features

IvorySQL is a powerful open source Object-Relational Database Management System (ORDBMS). Used to store data securely; supports best practices and allows to retrieve them while processing requests. In addition to that, it is compatible with Oracle's syntax for scenarios that use Oracle.

IvorySQL is already compatible with most of Oracle's syntax, and we developed the https://www.ivorysql.org/docs/Global%20Unique%20Index/create_global_unique_index[Global Unique Index] feature.

== Compatibility with Oracle

* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/parameter_settings[Compatible Configuration Parameters]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/package[Package]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/alter_table[Change Table]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/delete_table[Delete Table]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/update_table[Update Table]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/groupby[Group By]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/union[UNION]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/minus[MINUS Operator]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/escape-character[Escaped Characters]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/sequence[Sequence]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/datefuncs[Compatible Time and Date Functions]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/conversion_function[Conversion and comparison and NULL-related functions]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/nls_length_semantics[NLS_LENGTH_SEMANTICS parameter]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/nvarchar2[NVARCHAR2(size)]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/varchar2[VARCHAR2(size)]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/number[NUMBER [ (p [, s\]) ]]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/plisql[PL/iSQL]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/hierarchical#层级查询[Hierarchical Query]
* https://www.ivorysql.org/zh-CN/docs/next/Compatibillity_Features/string_function[String Functions]